fix: removed sso client registration/deregistration
